--- a/index.html
+++ b/index.html
@@ -485,10 +485,10 @@
         </div>
         
         <div class="col-4 col-sm-4 col-lg-2 text-center">
-          <a href="www.linkedin.com/in/dhiraj-d-shanbhag">
+          <a href="https://www.linkedin.com/in/dhiraj-d-shanbhag">
             <i class="fa fa-linkedin-square fa-4x sr-icons"></i>
           </a>
-          <p><a href="www.linkedin.com/in/dhiraj-d-shanbhag" class="text-blue">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/dhiraj-d-shanbhag" class="text-blue">LinkedIn</a></p>
         </div>
         
         <div class="col-4 col-sm-4 col-lg-2 text-center">
