--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
           <hr>
         </div>
         <div class="col-lg-8 mx-auto">
-          <p class="text-faded mb-5">Mountain Biker. Skier. UMass Lowell Graduate.</p>
+          <p class="text-faded mb-5">Machine learning @MLLAB</p>
           <p class="text-italic mb-5">
-            Software Engineer II</a>
+            MTech Student @ IISc,Bangalore</a>
           </p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More!</a>
         </div>
@@ -138,19 +138,18 @@
           <i class="fa fa-4x fa-id-card-o text-faded sr-icons"></i>
           <h3 class="text-white">Degree</h3>
           <p class="text-faded">Bachelor of Science in Computer Science from
-          <a class="text-white-link" href="https://www.uml.edu/" class="text-blue">UMass Lowell</a></p>
+          <a class="text-white-link" href="https://sjce.ac.in/" class="text-blue">SJCE,Mysore</a></p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center div-padding-fix mb-4"">
           <i class="fa fa-4x fa-graduation-cap text-faded sr-icons"></i>
           <h3 class="text-white">Graduation</h3>
-          <p class="text-faded">Graduated in May 2017 with Latin Honors</p>
+          <p class="text-faded">Graduated in June 2013. Computer Science.</p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4"">
           <i class="fa fa-4x fa-code text-faded sr-icons"></i>
           <h3 class="text-white">Languages</h3>
-          <p class="text-faded no-margin">C#, JavaScript, Java</p>
           <p class="text-faded">Python, and C / C++</p>
         </div>
 
@@ -181,31 +180,17 @@
 				<div class="col-sm-12 text-center mt-4 mb-4"">
           <i class="fa fa-4x fa-rocket text-primary sr-icons"></i>
           <h3 class="mt-4 mb-4">Software Engineer II</h3>
-          <p class="text-muted">August 2019 to Present: <span class="RtnRed">Raytheon</span></p>
+          <p class="text-muted">Jan 2017 to Sep 2017: <span class="RtnRed">Juniper Networks</span></p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
-          <h3 class="mt-4 mb-4">System Engineer II</h3>
-          <p class="text-muted">April 2018 to August 2019: BAE Systems</p>
+          <h3 class="mt-4 mb-4">Senior Software engineer</h3>
+          <p class="text-muted">July 2013 to Dec 2016: Ipinfusion</p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-truck text-primary sr-icons"></i>
-          <h3 class="mt-4 mb-4">Software Developer</h3>
-          <p class="text-muted">July 2017 to April 2018: Creative Logistics Solutions (CLS)</p>
-        </div>
-        <div class="col-lg-3 col-sm-6 text-center">
-          <!-- TIL: Bootstrap has awesome spacing classes
-                    https://getbootstrap.com/docs/4.0/utilities/spacing/ -->
-          <i class="fa fa-4x fa-android text-primary sr-icons"></i>
-          <i class="fa fa-4x fa-server text-primary sr-icons ml-4"></i>
-          <h3 class="mt-4 mb-4">Technical Intern</h3>
-          <p class="text-muted mb-4">Summer 2015: Fidelity Institutional (FI)</p>
-          <p class="text-muted mb-5">Summer 2016: Fidelity Personal Investing (PI) </p>
-        </div>
-        <div class="col-lg-3 col-sm-6 text-center">
-          <i class="fa fa-4x fa-pied-piper text-primary sr-icons"></i>
-          <h3 class="mt-4 mb-4">Research Assistant</h3>
-          <p class="text-muted">Summer 2014: UMass Lowell's Engaging Computing Group Research Lab</p>
+          <h3 class="mt-4 mb-4">Intern</h3>
+          <p class="text-muted">Jan 2013 to Jun 2013: Schneider Electric</p>
         </div>
       </div>
       <div class="text-center">
