--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
 			
 				<!-- Fun stuff includes links to Mountain Biking, Skiing and Spotify playlists -->
 				<div class="col-lg-4 col-sm-6 text-center">
-          <a class="href-black" href="https://downing.io/Mountain-Biking/">
-						<img src="img/portfolio/thumbnails/mtn-biking.jpg" 
+          <a class="href-black" href="https://iisc.ac.in/">
+						<img src="img/iisc-main.jpg" 
 								 class="img-fluid images-border"
-								 alt="Mountain Biking">
+								 alt="IISc">
 					</a>
           <h3 class="mt-4 mb-4">Mountain Biking</h3>
         </div>
