--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         Header image found at the following URL:
         https://upload.wikimedia.org/wikipedia/commons/f/f5/Free-ride.jpg
    -->
-  <header class="masthead text-center text-white d-flex">
+  <header class="masthead text-center text-blue d-flex">
     <div class="container my-auto">
       <div class="row">
         <div class="col-lg-10 mx-auto">
