--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
           <hr>
         </div>
         <div class="col-lg-8 mx-auto">
-          <p class="text-faded mb-5">Machine learning @MLLAB</p>
-          <p class="text-italic mb-5">
+          <p class="section-heading text-italic mb-5">Machine learning @MLLAB</p>
+          <p class="section-heading text-italic mb-5">
             MTech Student @ IISc,Bangalore</a>
           </p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More!</a>
