--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
           <hr>
         </div>
         <div class="col-lg-8 mx-auto">
-          <p class="text-white ">Machine learning @MLLAB</p>
-          <p class="text-white">
-            MTech Student @ IISc,Bangalore</a>
-          </p>
+          <h2 class="text-white ">Machine learning @MLLAB</h2>
+          <h2 class="text-white"><strong>
+            MTech Student @ IISc,Bangalore</strong></a>
+          </h2>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More!</a>
         </div>
       </div>
