--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 				<!-- Fun stuff includes links to Mountain Biking, Skiing and Spotify playlists -->
 				<div class="col-lg-4 col-sm-6 text-center">
           <a class="href-black" href="https://iisc.ac.in/">
-						<img src="img/iisc.jpg" 
+						<img src="img/iisc.jpeg" 
 								 class="img-fluid images-border"
 								 alt="IISc">
 					</a>
@@ -217,7 +217,7 @@
 			
 				<div class="col-lg-4 col-sm-6 text-center">
           <a class="href-black" href="https://iisc.ac.in/">
-						<img src="img/iisc.jpg" 
+						<img src="img/iisc.jpeg" 
 								 class="img-fluid images-border-skiing" 
 								 alt="SKIING!">
 					</a>
