added badminton project link

--- a/index.html
+++ b/index.html
@@ -251,12 +251,12 @@
       <div class="row no-gutters">
         <!-- First Link: source code for Badminton. -->
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://github.com/dhirajs/dhirajds.github.io">
+          <a class="portfolio-box" href="https://github.com/mr-easy/Badminton-Stroke-Classification">
             <img class="img-responsive" width="100%" height="auto" src= "img/iisc.jpeg" alt="img/portfolio/thumbnails/downing-io.jpg" >
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  Badminton Strokes Classification.
+                  Badminton Strokes Classification. Team: Ashish,Dhiraj,Rishabh.
                 </div>
                 <div class="project-name">
                   Stroke classification using wrist band sensor device.
